--- a/src/style/web/navig.css
+++ b/src/style/web/navig.css
@@ -1,4 +1,8 @@
 /* navig */
+.navBox {
+  position: relative;
+  z-index: 1;
+}
 .navBox_1 {
   position: fixed;
   top: 24px;
