--- a/src/style/web/papa.css
+++ b/src/style/web/papa.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 32px;
-  z-index: -1;
 }
 .main_reck__imgs {
   width: 600px;
