--- a/src/style/web/tspre.css
+++ b/src/style/web/tspre.css
@@ -34,7 +34,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: -1;
 }
 .image_reck__imgs {
   width: 600px;
